Sun Feb  7 16:50:58 EST 2010	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml preparing for release
	* src/apps/bsqlodbc.c use hdesc to detmine octet count
	* include/sybdb.h src/dblib/dblib.c src/tds/config.c
	* src/tds/iconv.c src/tds/login.c src/tds/util.c
	- Default bad client charset name to ISO 8859-1, 
	- and avoid TDSEPORTINSTANCE when one of port/instance
	- came from the [default] section. 

Sun Feb  7 01:33:47 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/getopt.c: reverted getopt LGPL patch

Fri Feb  5 17:06:14 EST 2010	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqlodbc.c use SQLGetDescField for nchar buffer size.

Tue Feb  2 10:47:26 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/getopt.c: replaced getopt with LGPL version

Tue Feb  2 10:35:20 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: add some ODBC considerations

Mon Feb  1 15:55:30 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/null2.c: make null2 test work using TDS 4.2

Mon Feb  1 11:15:12 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c src/odbc/odbc.c:
	- update for trusted connections, support Trusted_Connection
	  attribute in odbc.ini

Mon Feb  1 11:09:51 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac doc/userguide.sgml: update documentation

Fri Jan 29 19:56:51 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h src/odbc/connectparams.c:
	* src/odbc/odbc.c src/tds/config.c win32/winsetup.c:
	- complete connection string if possible

Fri Jan 29 15:08:07 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/setup.rc: make popup window always visible

Fri Jan 29 15:04:27 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: peephole optimization

Thu Jan 28 14:30:21 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h src/tds/log.c: