@@ -1,3 +1,6 @@
+Mon Feb  8 10:46:55 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/config.c: fix some memory problems
+
 Sun Feb  7 16:50:58 EST 2010	JK Lowden <jklowden@freetds.org>
 	* doc/userguide.sgml preparing for release
 	* src/apps/bsqlodbc.c use hdesc to detmine octet count
@@ -2298,4 +2301,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2984 2010/02/07 21:55:48 jklowden Exp $
+$Id: ChangeLog,v 1.2985 2010/02/08 09:48:08 freddy77 Exp $
